# python-functional-programming

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  README.md  cov.xml  poetry_scripts.py  pyproject.toml
.github/workflows/: github-actions.yml
.metals/: metals.h2.db
_site/: LICENSE  README.md  poetry_scripts.py
_site/docs/source/: api.rst  conf.py
_site/fppy/: abstract_algebra.py  cons_list_base.py  const.py  either.py  functor.py  gt.py  lazy_list.py  partial_function.py  property_based_testing_tools.py  try_monad.py
_site/notebooks/: examples_of_cons_list.ipynb  examples_of_monad_for.ipynb  examples_of_random.ipynb
_site/tests/: test_abstract_algebra.py  test_base.py  test_cons_list.py  test_functor.py  test_lazy.py  test_lazy_list.py  test_lazy_list_base.py  test_option.py
cov_html/: fppy___init___py.html  fppy_abstract_algebra_py.html  fppy_base_py.html  fppy_const_py.html  fppy_errors_py.html  fppy_lazy_list_py.html  fppy_option_py.html  fppy_partial_function_py.html  index.html  status.json
docs/: requirements.txt
docs/source/: api.rst  conf.py  development_manual.rst  index.rst
fppy/: abstract_algebra.py  base.py  combinator.py  cons_list.py  cons_list_base.py  const.py  either.py  errors.py  functor.py  gt.py  lazy_evaluate.py  lazy_list.py  lazy_list_base.py  lazy_list_lambda.py  option.py  partial_function.py  property_based_testing_tools.py  random.py  random_monad.py  stream.py  try_monad.py
fppy/abstract_algebra/: __init__.py  abstract_algebra.py  category_algebra.py
notebooks/: examples_of_cons_list.ipynb  examples_of_either.ipynb  examples_of_function_monad.ipynb  examples_of_lazy_list_lambda.ipynb  examples_of_random.ipynb  examples_of_stream.ipynb
suggestions/: laws.md
tests/: test_abstract_algebra.py  test_base.py  test_combinator.py  test_cons_base.py  test_cons_list.py  test_const.py  test_either.py  test_functor.py  test_lazy_list.py  test_lazy_list_base.py  test_lazy_list_lambda.py  test_option.py  test_partial_function.py  test_property_testing.py  test_random_monad.py  test_try.py
