[tool.poetry]
name = "fppy"
version = "0.1.0"
description = "A implements of Functional Programming in Python."
authors = ["huangbaochen <huangbaochenwo@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pathos = "^0.2.6"
drill = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-sugar = "^0.9.4"
pytest-coverage = "^0.0"
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
