[tool.poetry]
name = "fppy"
version = "0.1.0"
description = "A implements of Functional Programming in Python."
authors = ["huangbaochen <huangbaochenwo@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pathos = "^0.2.8"
drill = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
pytest-sugar = "^0.9.4"
pytest-coverage = "^0.0"
ipython = "^7.18.1"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinxemoji = "^0.1.9"
sphinxcontrib-mermaid = "^0.7.1"
coverage-badge = "^1.0.2"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "Function: 测试一个更强大的函数对象",
    "PartialFunction: 测试偏函数",
    "LazyList: 惰性列表对象",
    "base: 基本函数",
    "combinator: 组合子",
    "option: Option方法",
    "algebra: 代数学",
    "either: either方法",
    "io: io方法",
    "state: state方法",
    "lens: 光学元件",
    "property: property-based testing",
    "const: 常量"
]
addopts = [
    "--cov-config=.coveragerc"
]

[tool.poetry.scripts]
docs = "poetry_scripts:docs"
tests = "poetry_scripts:test_with_badge"

